Working on primary sidebar

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       rel="stylesheet"
     />
 
-    <!-- tailwind css link -->
-    <link rel="stylesheet" href="Styles/output.css" />
-
     <!-- iconscout cdn link-->
     <link
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css"
     />
+
+    <!-- tailwind css link -->
+    <link rel="stylesheet" href="Styles/output.css" />
 
     <!-- custom css link -->
     <link rel="stylesheet" href="Styles/global__custom__properties.css" />
@@ -64,7 +64,6 @@
     <!-- main -->
     <main class="main-container">
       <div class="wrapper-container grid ms-auto me-auto">
-
         <!-- primary sidebar   -->
         <aside class="sidebar primary-sidebar">
           <div class="user__info primary-bg">
@@ -82,9 +81,7 @@
             </div>
           </div>
 
-          <div class="sidebar-nav">
-
-          </div>
+          <div class="sidebar-nav"></div>
         </aside>
 
         <article></article>
@@ -92,6 +89,5 @@
         <aside></aside>
       </div>
     </main>
-    
   </body>
 </html>
