working on notifications

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <p class="nav__link font-semibold text-primary">Notifications</p>
 
               <!-- notifications dialog -->
-              <div class="notification__wrapper grid primary-bg absolute z-10 gap-6 ">
+              <div class="notification__wrapper grid primary-bg absolute z-40 gap-6 ">
                 <div class="notification__body flex items-start gap-5">
                   <div class="notification__user-profile rounded-full overflow-hidden">
                     <img src="/assets/images/profile-15.jpg">
@@ -186,7 +186,6 @@
               <span><img src="assets/icons/gear-fill.svg"></img></span>
               <p class="nav__link font-semibold text-primary">Settings</p>
             </li>
-
           </ul>
         </div>
 
@@ -289,11 +288,11 @@
 
         <div class="wrapper">
           <div class="feed__likes-info flex gap-4 items-center">
-            <div class="flex">
+            <div class="flex isolate">
               <span class="likedby-profile overflow-hidden rounded-full"><img src="assets/images/profile-13.jpg"></span>
-              <span class="likedby-profile relative  overflow-hidden rounded-full"><img
+              <span class="likedby-profile relative   overflow-hidden rounded-full"><img
                   src="assets/images/profile-6.jpg"></span>
-              <span class="likedby-profile relative overflow-hidden rounded-full"><img
+              <span class="likedby-profile relative  overflow-hidden rounded-full"><img
                   src="assets/images/profile-2.jpg"></span>
             </div>
             <p class="likes__description text-secondary font-medium">Liked by <span class="text-primary inline
@@ -342,9 +341,9 @@
           <div class="feed__likes-info flex gap-4 items-center">
             <div class="flex">
               <span class="likedby-profile overflow-hidden rounded-full"><img src="assets/images/profile-13.jpg"></span>
-              <span class="likedby-profile relative  overflow-hidden rounded-full"><img
+              <span class="likedby-profile relative   overflow-hidden rounded-full"><img
                   src="assets/images/profile-6.jpg"></span>
-              <span class="likedby-profile relative overflow-hidden rounded-full"><img
+              <span class="likedby-profile relative  overflow-hidden rounded-full"><img
                   src="assets/images/profile-2.jpg"></span>
             </div>
             <p class="likes__description text-secondary font-medium">Liked by <span class="text-primary inline
@@ -392,9 +391,9 @@
           <div class="feed__likes-info flex gap-4 items-center">
             <div class="flex">
               <span class="likedby-profile overflow-hidden rounded-full"><img src="assets/images/profile-13.jpg"></span>
-              <span class="likedby-profile relative  overflow-hidden rounded-full"><img
+              <span class="likedby-profile relative   overflow-hidden rounded-full"><img
                   src="assets/images/profile-6.jpg"></span>
-              <span class="likedby-profile relative overflow-hidden rounded-full"><img
+              <span class="likedby-profile relative  overflow-hidden rounded-full"><img
                   src="assets/images/profile-2.jpg"></span>
             </div>
             <p class="likes__description text-secondary font-medium">Liked by <span class="text-primary inline
@@ -444,9 +443,9 @@
           <div class="feed__likes-info flex gap-4 items-center">
             <div class="flex">
               <span class="likedby-profile overflow-hidden rounded-full"><img src="assets/images/profile-13.jpg"></span>
-              <span class="likedby-profile relative  overflow-hidden rounded-full"><img
+              <span class="likedby-profile relative   overflow-hidden rounded-full"><img
                   src="assets/images/profile-6.jpg"></span>
-              <span class="likedby-profile relative overflow-hidden rounded-full"><img
+              <span class="likedby-profile relative  overflow-hidden rounded-full"><img
                   src="assets/images/profile-2.jpg"></span>
             </div>
             <p class="likes__description text-secondary font-medium">Liked by <span class="text-primary inline
@@ -497,9 +496,9 @@
           <div class="feed__likes-info flex gap-4 items-center">
             <div class="flex">
               <span class="likedby-profile overflow-hidden rounded-full"><img src="assets/images/profile-13.jpg"></span>
-              <span class="likedby-profile relative  overflow-hidden rounded-full"><img
+              <span class="likedby-profile relative   overflow-hidden rounded-full"><img
                   src="assets/images/profile-6.jpg"></span>
-              <span class="likedby-profile relative overflow-hidden rounded-full"><img
+              <span class="likedby-profile relative  overflow-hidden rounded-full"><img
                   src="assets/images/profile-2.jpg"></span>
             </div>
             <p class="likes__description text-secondary font-medium">Liked by <span class="text-primary inline
@@ -551,9 +550,9 @@
           <div class="feed__likes-info flex gap-4 items-center">
             <div class="flex">
               <span class="likedby-profile overflow-hidden rounded-full"><img src="assets/images/profile-13.jpg"></span>
-              <span class="likedby-profile relative  overflow-hidden rounded-full"><img
+              <span class="likedby-profile relative   overflow-hidden rounded-full"><img
                   src="assets/images/profile-6.jpg"></span>
-              <span class="likedby-profile relative overflow-hidden rounded-full"><img
+              <span class="likedby-profile relative  overflow-hidden rounded-full"><img
                   src="assets/images/profile-2.jpg"></span>
             </div>
             <p class="likes__description text-secondary font-medium">Liked by <span class="text-primary inline
@@ -581,6 +580,6 @@
     </aside>
     </div>
   </main>
-
+  
 </body>
 </html>
